[SYNCOPE-1717] Minimum JDK required and dependency versions upgraded (#398)